Atualização translations/texts/items/generic/food/tier3/automatoshake.consumable.json

--- a/translations/texts/items/generic/food/tier3/automatoshake.consumable.json
+++ b/translations/texts/items/generic/food/tier3/automatoshake.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Automato Shake"
+      "Eng": "Automato Shake",
+      "Por": "Shake de Automate"
     }
   }
 ]
