Atualização translations/texts/items/generic/food/tier3/automatostew.consumable.json

--- a/translations/texts/items/generic/food/tier3/automatostew.consumable.json
+++ b/translations/texts/items/generic/food/tier3/automatostew.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Automato Stew"
+      "Eng": "Automato Stew",
+      "Por": "Ensopado de Automate"
     }
   }
 ]
