--- a/translations/texts/items/generic/food/tier3/bananacreamdonut.consumable.json
+++ b/translations/texts/items/generic/food/tier3/bananacreamdonut.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Banana Cream Donut"
+      "Eng": "Banana Cream Donut",
+      "Por": "Rosquinha de Creme de Banana"
     }
   }
 ]
