Atualização translations/texts/items/generic/food/tier3/bananacreampie.consumable.json

--- a/translations/texts/items/generic/food/tier3/bananacreampie.consumable.json
+++ b/translations/texts/items/generic/food/tier3/bananacreampie.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Banana Cream Pie"
+      "Eng": "Banana Cream Pie",
+      "Por": "Torta de Creme de Banana"
     }
   }
 ]
