--- a/translations/texts/items/generic/food/tier3/bananaicecream.consumable.json
+++ b/translations/texts/items/generic/food/tier3/bananaicecream.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Banana Ice Cream"
+      "Eng": "Banana Ice Cream",
+      "Por": "Sorvete de Banana"
     }
   }
 ]
