Atualização translations/texts/items/generic/food/tier3/batteredbanana.consumable.json

--- a/translations/texts/items/generic/food/tier3/batteredbanana.consumable.json
+++ b/translations/texts/items/generic/food/tier3/batteredbanana.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Battered Banana"
+      "Eng": "Battered Banana",
+      "Por": "Banana Amassada"
     }
   }
 ]
