--- a/translations/texts/items/generic/food/tier3/cactiicecream.consumable.json
+++ b/translations/texts/items/generic/food/tier3/cactiicecream.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cacti Ice Cream"
+      "Eng": "Cacti Ice Cream",
+      "Por": "Sorvete de Cacto"
     }
   }
 ]
