Atualização translations/texts/items/generic/food/tier3/campfirebanana.consumable.json

--- a/translations/texts/items/generic/food/tier3/campfirebanana.consumable.json
+++ b/translations/texts/items/generic/food/tier3/campfirebanana.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Campfire Banana"
+      "Eng": "Campfire Banana",
+      "Por": "Banana na Fogueira"
     }
   }
 ]
