--- a/translations/texts/items/generic/food/tier3/candyautomato.consumable.json
+++ b/translations/texts/items/generic/food/tier3/candyautomato.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Candy Automato"
+      "Eng": "Candy Automato",
+      "Por": "Doce de Automate"
     }
   }
 ]
