Atualização translations/texts/items/generic/food/tier3/coconuticecream.consumable.json

--- a/translations/texts/items/generic/food/tier3/coconuticecream.consumable.json
+++ b/translations/texts/items/generic/food/tier3/coconuticecream.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Coconut Ice Cream"
+      "Eng": "Coconut Ice Cream",
+      "Por": "Sorvete de Coco"
     }
   }
 ]
