Atualização translations/texts/items/generic/food/tier3/coconutmilk.consumable.json

--- a/translations/texts/items/generic/food/tier3/coconutmilk.consumable.json
+++ b/translations/texts/items/generic/food/tier3/coconutmilk.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Coconut Drink"
+      "Eng": "Coconut Drink",
+      "Por": "Bebida de Coco"
     }
   }
 ]
