--- a/translations/texts/items/generic/food/tier3/coconutrice.consumable.json
+++ b/translations/texts/items/generic/food/tier3/coconutrice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Coconut Rice"
+      "Eng": "Coconut Rice",
+      "Por": "Arroz com Coco"
     }
   }
 ]
