--- a/translations/texts/items/generic/food/tier3/desertsalsa.consumable.json
+++ b/translations/texts/items/generic/food/tier3/desertsalsa.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Desert Salsa"
+      "Eng": "Desert Salsa",
+      "Por": "Molho do Deserto"
     }
   }
 ]
