--- a/translations/texts/items/generic/food/tier3/fishinabone.consumable.json
+++ b/translations/texts/items/generic/food/tier3/fishinabone.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fish in a Bone"
+      "Eng": "Fish in a Bone",
+      "Por": "Peixe em um Boneboo"
     }
   }
 ]
