--- a/translations/texts/items/generic/food/tier3/fruitsalad.consumable.json
+++ b/translations/texts/items/generic/food/tier3/fruitsalad.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fruit Salad"
+      "Eng": "Fruit Salad",
+      "Por": "Salada de Frutas"
     }
   }
 ]
