--- a/translations/texts/items/generic/food/tier3/luckydip.consumable.json
+++ b/translations/texts/items/generic/food/tier3/luckydip.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lucky Dip"
+      "Eng": "Lucky Dip",
+      "Por": "Ensopado da Sorte"
     }
   }
 ]
