--- a/translations/texts/items/generic/food/tier3/pineapplejam.consumable.json
+++ b/translations/texts/items/generic/food/tier3/pineapplejam.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pineapple Jam"
+      "Eng": "Pineapple Jam",
+      "Por": "Geléia de Abacaxi"
     }
   }
 ]
