--- a/translations/texts/items/generic/food/tier3/pineapplejuice.consumable.json
+++ b/translations/texts/items/generic/food/tier3/pineapplejuice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pineapple Juice"
+      "Eng": "Pineapple Juice",
+      "Por": "Suco de Abacaxi"
     }
   }
 ]
