--- a/translations/texts/items/generic/food/tier3/pineapplepizzaslice.consumable.json
+++ b/translations/texts/items/generic/food/tier3/pineapplepizzaslice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pineapple Pizza Slice"
+      "Eng": "Pineapple Pizza Slice",
+      "Por": "Fatia de Pizza de Abacaxi"
     }
   }
 ]
