Atualização translations/texts/items/generic/food/tier3/spookydonut.consumable.json

--- a/translations/texts/items/generic/food/tier3/spookydonut.consumable.json
+++ b/translations/texts/items/generic/food/tier3/spookydonut.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spooky Donut"
+      "Eng": "Spooky Donut",
+      "Por": "Rosquinha Assustadora"
     }
   }
 ]
