--- a/translations/texts/items/generic/food/tier3/spookypie.consumable.json
+++ b/translations/texts/items/generic/food/tier3/spookypie.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spooky Pie"
+      "Eng": "Spooky Pie",
+      "Por": "Torta Assustadora"
     }
   }
 ]
