--- a/translations/texts/items/generic/food/tier3/stuffedautomato.consumable.json
+++ b/translations/texts/items/generic/food/tier3/stuffedautomato.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stuffed Automato"
+      "Eng": "Stuffed Automato",
+      "Por": "Automate Recheado"
     }
   }
 ]
