--- a/translations/texts/items/generic/food/tier3/thornjuice.consumable.json
+++ b/translations/texts/items/generic/food/tier3/thornjuice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thorn Juice"
+      "Eng": "Thorn Juice",
+      "Por": "Suco de Espinhos"
     }
   }
 ]
