--- a/translations/texts/items/generic/food/tier3/tropicalpunch.consumable.json
+++ b/translations/texts/items/generic/food/tier3/tropicalpunch.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tropical Punch"
+      "Eng": "Tropical Punch",
+      "Por": "Ponche Tropical"
     }
   }
 ]
