--- a/translations/texts/items/generic/food/tier4/alienfruitjam.consumable.json
+++ b/translations/texts/items/generic/food/tier4/alienfruitjam.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Fruit Jam"
+      "Eng": "Alien Fruit Jam",
+      "Por": "Geléia de Fruta Alienígena"
     }
   }
 ]
