--- a/translations/texts/items/generic/food/tier4/alienfruitjuice.consumable.json
+++ b/translations/texts/items/generic/food/tier4/alienfruitjuice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Fruit Juice"
+      "Eng": "Alien Fruit Juice",
+      "Por": "Suco de Fruta Alienígena"
     }
   }
 ]
