--- a/translations/texts/items/generic/food/tier4/avesmingoicecream.consumable.json
+++ b/translations/texts/items/generic/food/tier4/avesmingoicecream.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avesmingo Ice Cream"
+      "Eng": "Avesmingo Ice Cream",
+      "Por": "Sorvete de Avesmingo"
     }
   }
 ]
