--- a/translations/texts/items/generic/food/tier4/avesmingojuice.consumable.json
+++ b/translations/texts/items/generic/food/tier4/avesmingojuice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avesmingo Juice"
+      "Eng": "Avesmingo Juice",
+      "Por": "Suco de Avesmingo"
     }
   }
 ]
