Atualização translations/texts/items/generic/food/tier4/bananasplit.consumable.json

--- a/translations/texts/items/generic/food/tier4/bananasplit.consumable.json
+++ b/translations/texts/items/generic/food/tier4/bananasplit.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Banana Split"
+      "Eng": "Banana Split",
+      "Por": "Banana Split"
     }
   }
 ]
