--- a/translations/texts/items/generic/food/tier4/bloodypuss.consumable.json
+++ b/translations/texts/items/generic/food/tier4/bloodypuss.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bloody Puss"
+      "Eng": "Bloody Puss",
+      "Por": "Puss Sangrento"
     }
   }
 ]
