Atualização translations/texts/items/generic/food/tier4/oceanrisotto.consumable.json

--- a/translations/texts/items/generic/food/tier4/oceanrisotto.consumable.json
+++ b/translations/texts/items/generic/food/tier4/oceanrisotto.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ocean Risotto"
+      "Eng": "Ocean Risotto",
+      "Por": "Risoto do Oceano"
     }
   }
 ]
