--- a/translations/texts/items/generic/food/tier4/oceansalsa.consumable.json
+++ b/translations/texts/items/generic/food/tier4/oceansalsa.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ocean Salsa"
+      "Eng": "Ocean Salsa",
+      "Por": "Molho do Oceano"
     }
   }
 ]
