--- a/translations/texts/items/generic/food/tier4/oceansurprise.consumable.json
+++ b/translations/texts/items/generic/food/tier4/oceansurprise.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ocean Surprise"
+      "Eng": "Ocean Surprise",
+      "Por": "Surpresa do Oceano"
     }
   }
 ]
