--- a/translations/texts/items/generic/food/tier4/oculemonmeringue.consumable.json
+++ b/translations/texts/items/generic/food/tier4/oculemonmeringue.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Oculemon Meringue"
+      "Eng": "Oculemon Meringue",
+      "Por": "Merengue de Oculemon"
     }
   }
 ]
