--- a/translations/texts/items/generic/food/tier4/oculemonstew.consumable.json
+++ b/translations/texts/items/generic/food/tier4/oculemonstew.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Oculemon Stew"
+      "Eng": "Oculemon Stew",
+      "Por": "Ensopado de Oculemon"
     }
   }
 ]
