Atualização translations/texts/items/generic/food/tier4/pussplumpudding.consumable.json

--- a/translations/texts/items/generic/food/tier4/pussplumpudding.consumable.json
+++ b/translations/texts/items/generic/food/tier4/pussplumpudding.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pussplum Pudding"
+      "Eng": "Pussplum Pudding",
+      "Por": "Pudim de Pussplum"
     }
   }
 ]
