--- a/translations/texts/items/generic/food/tier4/pussplumtart.consumable.json
+++ b/translations/texts/items/generic/food/tier4/pussplumtart.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pussplum Tart"
+      "Eng": "Pussplum Tart",
+      "Por": "Torta de Pussplum"
     }
   }
 ]
