Atualização translations/texts/items/generic/food/tier4/reefjuice.consumable.json

--- a/translations/texts/items/generic/food/tier4/reefjuice.consumable.json
+++ b/translations/texts/items/generic/food/tier4/reefjuice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Reef Juice"
+      "Eng": "Reef Juice",
+      "Por": "Suco de Reefpod"
     }
   }
 ]
