Atualização translations/texts/items/generic/food/tier4/pussplumjam.consumable.json

--- a/translations/texts/items/generic/food/tier4/pussplumjam.consumable.json
+++ b/translations/texts/items/generic/food/tier4/pussplumjam.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pussplum Jam"
+      "Eng": "Pussplum Jam",
+      "Por": "Geléia de Pussplum"
     }
   }
 ]
