--- a/translations/texts/items/generic/food/tier4/reefpodsurprise.consumable.json
+++ b/translations/texts/items/generic/food/tier4/reefpodsurprise.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Reefpod Surprise"
+      "Eng": "Reefpod Surprise",
+      "Por": "Surpresa de Reefpod"
     }
   }
 ]
