Atualização translations/texts/items/generic/food/tier4/reefshake.consumable.json

--- a/translations/texts/items/generic/food/tier4/reefshake.consumable.json
+++ b/translations/texts/items/generic/food/tier4/reefshake.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Reefshake"
+      "Eng": "Reefshake",
+      "Por": "Shake de Reefpod"
     }
   }
 ]
