--- a/translations/texts/items/generic/food/tier4/ricecake.consumable.json
+++ b/translations/texts/items/generic/food/tier4/ricecake.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rice Cake"
+      "Eng": "Rice Cake",
+      "Por": "Bolinho de Arroz"
     }
   }
 ]
