Atualização translations/texts/items/generic/food/tier4/saltsalad.consumable.json

--- a/translations/texts/items/generic/food/tier4/saltsalad.consumable.json
+++ b/translations/texts/items/generic/food/tier4/saltsalad.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Salt Salad"
+      "Eng": "Salt Salad",
+      "Por": "Salada Salgada"
     }
   }
 ]
