Atualização translations/texts/items/generic/food/tier4/seafoodgratin.consumable.json

--- a/translations/texts/items/generic/food/tier4/seafoodgratin.consumable.json
+++ b/translations/texts/items/generic/food/tier4/seafoodgratin.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Seafood Gratin"
+      "Eng": "Seafood Gratin",
+      "Por": "Gratinado de Frutos do Mar"
     }
   }
 ]
