Atualização translations/texts/items/generic/food/tier4/soggysack.consumable.json

--- a/translations/texts/items/generic/food/tier4/soggysack.consumable.json
+++ b/translations/texts/items/generic/food/tier4/soggysack.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Soggy Sack"
+      "Eng": "Soggy Sack",
+      "Por": "Dirturchin Empanado"
     }
   }
 ]
