--- a/translations/texts/items/generic/food/tier4/stuffeddirturchin.consumable.json
+++ b/translations/texts/items/generic/food/tier4/stuffeddirturchin.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stuffed Dirturchin"
+      "Eng": "Stuffed Dirturchin",
+      "Por": "Dirturchin Recheado"
     }
   }
 ]
