--- a/translations/texts/items/generic/food/tier4/toxicjamdonut.consumable.json
+++ b/translations/texts/items/generic/food/tier4/toxicjamdonut.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toxic Jam Donut"
+      "Eng": "Toxic Jam Donut",
+      "Por": "Rosquinha de Geléia de Toxictop"
     }
   }
 ]
