Atualização translations/texts/items/generic/food/tier4/toxictopjam.consumable.json

--- a/translations/texts/items/generic/food/tier4/toxictopjam.consumable.json
+++ b/translations/texts/items/generic/food/tier4/toxictopjam.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toxictop Jam"
+      "Eng": "Toxictop Jam",
+      "Por": "Geléia de Toxictop"
     }
   }
 ]
