Atualização translations/texts/items/generic/food/tier4/toxicjamdonut.consumable.json

--- a/translations/texts/items/generic/food/tier4/toxicjamdonut.consumable.json
+++ b/translations/texts/items/generic/food/tier4/toxicjamdonut.consumable.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Toxic Jam Donut",
-      "Por": "Rosquinha de Geléia de Toxictop"
+      "Por": "Rosquinha de Geléia Tóxica"
     }
   }
 ]
