--- a/translations/texts/items/generic/food/tier5/16GBpasty.consumable.json
+++ b/translations/texts/items/generic/food/tier5/16GBpasty.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rusty Pasty"
+      "Eng": "Rusty Pasty",
+      "Por": "Pastel Enferrujado"
     }
   }
 ]
