--- a/translations/texts/items/generic/food/tier5/8gbpizzap.consumable.json
+++ b/translations/texts/items/generic/food/tier5/8gbpizzap.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pizzap Slice"
+      "Eng": "Pizzap Slice",
+      "Por": "Fatia de Pizzap"
     }
   }
 ]
