Atualização translations/texts/items/generic/food/tier5/eggshooticecream.consumable.json

--- a/translations/texts/items/generic/food/tier5/eggshooticecream.consumable.json
+++ b/translations/texts/items/generic/food/tier5/eggshooticecream.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Eggshoot Ice Cream"
+      "Eng": "Eggshoot Ice Cream",
+      "Por": "Sorvete de Eggshoot"
     }
   }
 ]
