--- a/translations/texts/items/generic/food/tier5/eggshootsalad.consumable.json
+++ b/translations/texts/items/generic/food/tier5/eggshootsalad.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Eggshoot Salad"
+      "Eng": "Eggshoot Salad",
+      "Por": "Salada de Eggshoot"
     }
   }
 ]
