--- a/translations/texts/items/generic/food/tier5/nutsandbolts.consumable.json
+++ b/translations/texts/items/generic/food/tier5/nutsandbolts.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Nuts'n'Bolts"
+      "Eng": "Nuts'n'Bolts",
+      "Por": "Porcas e Parafusos"
     }
   }
 ]
