--- a/translations/texts/items/generic/food/tier5/piodia.consumable.json
+++ b/translations/texts/items/generic/food/tier5/piodia.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Piodia Slice"
+      "Eng": "Piodia Slice",
+      "Por": "Fatia de Piodia"
     }
   }
 ]
