--- a/translations/texts/items/generic/food/tier6/burningeyeballs.consumable.json
+++ b/translations/texts/items/generic/food/tier6/burningeyeballs.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Burning Eyeballs"
+      "Eng": "Burning Eyeballs",
+      "Por": "Globos Oculares Ardentes"
     }
   }
 ]
