--- a/translations/texts/items/generic/food/tier6/coralcreepcurry.consumable.json
+++ b/translations/texts/items/generic/food/tier6/coralcreepcurry.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Coralcreep Curry"
+      "Eng": "Coralcreep Curry",
+      "Por": "Curry de Coralcreep"
     }
   }
 ]
