--- a/translations/texts/items/generic/food/tier6/hothothotpot.consumable.json
+++ b/translations/texts/items/generic/food/tier6/hothothotpot.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hot Hot Hotpot"
+      "Eng": "Hot Hot Hotpot",
+      "Por": "Hot Hot Hotpot"
     }
   }
 ]
