--- a/translations/texts/items/generic/food/tier6/neonmelonjam.consumable.json
+++ b/translations/texts/items/generic/food/tier6/neonmelonjam.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Neonmelon Jam"
+      "Eng": "Neonmelon Jam",
+      "Por": "Geléia de Melão-Neon"
     }
   }
 ]
