Atualização translations/texts/items/generic/food/tier6/pearlpeaparcels.consumable.json

--- a/translations/texts/items/generic/food/tier6/pearlpeaparcels.consumable.json
+++ b/translations/texts/items/generic/food/tier6/pearlpeaparcels.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pearlpea Parcels"
+      "Eng": "Pearlpea Parcels",
+      "Por": "Pearlpeas Embrulhadas"
     }
   }
 ]
