--- a/translations/texts/items/generic/food/tier6/spicyfeathercrown.consumable.json
+++ b/translations/texts/items/generic/food/tier6/spicyfeathercrown.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spicy Feathercrown"
+      "Eng": "Spicy Feathercrown",
+      "Por": "Feathercrown Picante"
     }
   }
 ]
