--- a/translations/texts/items/generic/food/tier6/spicyribs.consumable.json
+++ b/translations/texts/items/generic/food/tier6/spicyribs.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spicy Ribs"
+      "Eng": "Spicy Ribs",
+      "Por": "Costelas Picantes"
     }
   }
 ]
