Atualização translations/texts/items/generic/food/tier6/ultimatejuice.consumable.json

--- a/translations/texts/items/generic/food/tier6/ultimatejuice.consumable.json
+++ b/translations/texts/items/generic/food/tier6/ultimatejuice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ultimate Juice"
+      "Eng": "Ultimate Juice",
+      "Por": "Suco Supremo"
     }
   }
 ]
