--- a/translations/texts/items/generic/food/tier6/volcanicsalsa.consumable.json
+++ b/translations/texts/items/generic/food/tier6/volcanicsalsa.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Volcanic Salsa"
+      "Eng": "Volcanic Salsa",
+      "Por": "Molho Vulcânico"
     }
   }
 ]
