--- a/translations/texts/items/generic/food/tier6/wartweedjam.consumable.json
+++ b/translations/texts/items/generic/food/tier6/wartweedjam.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wartweed Jam"
+      "Eng": "Wartweed Jam",
+      "Por": "Geléia de Wartweed"
     }
   }
 ]
