Atualização translations/texts/items/generic/food/tier6/wartweedjamdonut.consumable.json

--- a/translations/texts/items/generic/food/tier6/wartweedjamdonut.consumable.json
+++ b/translations/texts/items/generic/food/tier6/wartweedjamdonut.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wartweed Jam Donut"
+      "Eng": "Wartweed Jam Donut",
+      "Por": "Rosquinha de Geléia de Wartweed"
     }
   }
 ]
