Atualização translations/texts/items/generic/food/tier6/wartweedstew.consumable.json

--- a/translations/texts/items/generic/food/tier6/wartweedstew.consumable.json
+++ b/translations/texts/items/generic/food/tier6/wartweedstew.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wartweed Stew"
+      "Eng": "Wartweed Stew",
+      "Por": "Ensopado de Wartweed"
     }
   }
 ]
