--- a/translations/texts/items/generic/produce/alienfruit.consumable.json
+++ b/translations/texts/items/generic/produce/alienfruit.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Fruit"
+      "Eng": "Alien Fruit",
+      "Por": "Fruta Alienígena"
     }
   }
 ]
