--- a/translations/texts/items/generic/produce/coffeebeans.consumable.json
+++ b/translations/texts/items/generic/produce/coffeebeans.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Coffee Beans"
+      "Eng": "Coffee Beans",
+      "Por": "Grãos de Café"
     }
   }
 ]
