Atualização translations/texts/items/generic/produce/crystalplant.item.json

--- a/translations/texts/items/generic/produce/crystalplant.item.json
+++ b/translations/texts/items/generic/produce/crystalplant.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Crystal Plant"
+      "Eng": "Crystal Plant",
+      "Por": "Planta de Cristal"
     }
   }
 ]
