Atualização translations/texts/items/generic/produce/feathercrown.consumable.json

--- a/translations/texts/items/generic/produce/feathercrown.consumable.json
+++ b/translations/texts/items/generic/produce/feathercrown.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Feathercrown"
+      "Eng": "Feathercrown",
+      "Por": "Feathercrown"
     }
   }
 ]
