--- a/translations/texts/items/generic/produce/thornfruit.consumable.json
+++ b/translations/texts/items/generic/produce/thornfruit.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thorn Fruit"
+      "Eng": "Thorn Fruit",
+      "Por": "Fruta Espinho"
     }
   }
 ]
