--- a/translations/texts/items/generic/mechparts/arm/mecharmbeamdrill.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmbeamdrill.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Beam Drill Mech Arm"
+      "Eng": "Beam Drill Mech Arm",
+      "Por": "Braço de Mecha de Broca de Feixe"
     }
   }
 ]
