--- a/translations/texts/items/generic/mechparts/arm/mecharmbeamsniper.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmbeamsniper.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Beam Sniper Mech Arm"
+      "Eng": "Beam Sniper Mech Arm",
+      "Por": "Braço de Mecha de Feixe Sniper"
     }
   }
 ]
