--- a/translations/texts/items/generic/mechparts/arm/mecharmchainsaw.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmchainsaw.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Neo Chainsaw Mech Arm"
+      "Eng": "Neo Chainsaw Mech Arm",
+      "Por": "Braço de Mecha de Neo-Motosserra"
     }
   }
 ]
