--- a/translations/texts/items/generic/mechparts/arm/mecharmclustermine.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmclustermine.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cluster Mine Mech Arm"
+      "Eng": "Cluster Mine Mech Arm",
+      "Por": "Braço de Mecha de Grupo de Minas"
     }
   }
 ]
