Atualização translations/texts/items/generic/mechparts/arm/mecharmdespawn.item.json

--- a/translations/texts/items/generic/mechparts/arm/mecharmdespawn.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmdespawn.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Despawn Mech Arm"
+      "Eng": "Despawn Mech Arm",
+      "Por": "Removedor de Braço de Mecha"
     }
   }
 ]
