--- a/translations/texts/items/generic/mechparts/arm/mecharmdrill.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmdrill.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Drill Mech Arm"
+      "Eng": "Drill Mech Arm",
+      "Por": "Braço de Mecha de Broca"
     }
   }
 ]
