--- a/translations/texts/items/generic/mechparts/arm/mecharmdualrifle.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmdualrifle.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dual Rifle Mech Arm"
+      "Eng": "Dual Rifle Mech Arm",
+      "Por": "Braço de Mecha de Rifle Duplo"
     }
   }
 ]
