Atualização translations/texts/items/generic/mechparts/arm/mecharmenergyblade.item.json

--- a/translations/texts/items/generic/mechparts/arm/mecharmenergyblade.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmenergyblade.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Energy Blade Mech Arm"
+      "Eng": "Energy Blade Mech Arm",
+      "Por": "Braço de Mecha de Lâmina de Energia"
     }
   }
 ]
