--- a/translations/texts/items/generic/mechparts/arm/mecharmenergyrifle.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmenergyrifle.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Energy Rifle Mech Arm"
+      "Eng": "Energy Rifle Mech Arm",
+      "Por": "Braço de Mecha de Rifle de Energia"
     }
   }
 ]
