--- a/translations/texts/items/generic/mechparts/arm/mecharmflakcannon.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmflakcannon.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flak Cannon Mech Arm"
+      "Eng": "Flak Cannon Mech Arm",
+      "Por": "Braço de Mecha de Canhão "
     }
   }
 ]
