--- a/translations/texts/items/generic/mechparts/arm/mecharmgatling.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmgatling.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Gatling Gun Mech Arm"
+      "Eng": "Gatling Gun Mech Arm",
+      "Por": "Braço de Mecha de Metralhadora"
     }
   }
 ]
