--- a/translations/texts/items/generic/mechparts/arm/mecharmgravitymine.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmgravitymine.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Gravity Mine Mech Arm"
+      "Eng": "Gravity Mine Mech Arm",
+      "Por": "Braço de Mecha de Mina de Gravidade"
     }
   }
 ]
