--- a/translations/texts/items/generic/mechparts/arm/mecharmguidedmissiles.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmguidedmissiles.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Guided Missile Mech Arm"
+      "Eng": "Guided Missile Mech Arm",
+      "Por": "Braço de Mecha de Míssil Guiado"
     }
   }
 ]
