--- a/translations/texts/items/generic/mechparts/arm/mecharmheatrifle.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmheatrifle.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Heatrifle Mech Arm"
+      "Eng": "Heatrifle Mech Arm",
+      "Por": "Braço de Mecha de Rifle de Calor"
     }
   }
 ]
