--- a/translations/texts/items/generic/mechparts/arm/mecharmhomingmissile.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmhomingmissile.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Homing Missile Mech Arm"
+      "Eng": "Homing Missile Mech Arm",
+      "Por": "Braço de Mecha de Míssil Auto Direcional"
     }
   }
 ]
