--- a/translations/texts/items/generic/mechparts/arm/mecharmmissilerack.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmmissilerack.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Missile Rack Mech Arm"
+      "Eng": "Missile Rack Mech Arm",
+      "Por": "Braço de Mecha de Rack de Míssil"
     }
   }
 ]
