--- a/translations/texts/items/generic/mechparts/arm/mecharmmultidrone.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmmultidrone.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Swarm Drone Mech Arm"
+      "Eng": "Swarm Drone Mech Arm",
+      "Por": "Braço de Mecha de Drones"
     }
   }
 ]
