--- a/translations/texts/items/generic/mechparts/arm/mecharmplasmadrone.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmplasmadrone.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plasma Drone Mech Arm"
+      "Eng": "Plasma Drone Mech Arm",
+      "Por": "Braço de Mecha de Drone de Plasma"
     }
   }
 ]
