--- a/translations/texts/items/generic/mechparts/arm/mecharmshielddrone.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmshielddrone.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shield Drone Mech Arm"
+      "Eng": "Shield Drone Mech Arm",
+      "Por": "Braço de Mecha de Drone Escudo"
     }
   }
 ]
