Atualização translations/texts/items/generic/mechparts/arm/mecharmspikefist.item.json

--- a/translations/texts/items/generic/mechparts/arm/mecharmspikefist.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmspikefist.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spikefist Mech Arm"
+      "Eng": "Spikefist Mech Arm",
+      "Por": "Braço de Mecha de Punho de Espinhos"
     }
   }
 ]
