--- a/translations/texts/items/generic/mechparts/arm/mecharmsplitshot.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmsplitshot.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Split Shot Mech Arm"
+      "Eng": "Split Shot Mech Arm",
+      "Por": "Braço de Mecha de Tiro Dividido"
     }
   }
 ]
