--- a/translations/texts/items/generic/mechparts/arm/mecharmteslastream.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmteslastream.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tesla Stream Mech Arm"
+      "Eng": "Tesla Stream Mech Arm",
+      "Por": "Braço de Mecha de Corrente Tesla"
     }
   }
 ]
