--- a/translations/texts/items/generic/mechparts/arm/mecharmtommygun.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmtommygun.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tommy Gun Mech Arm"
+      "Eng": "Tommy Gun Mech Arm",
+      "Por": "Braço de Mecha de Arma de Tommy"
     }
   }
 ]
