--- a/translations/texts/items/generic/mechparts/arm/mecharmwobbleshot.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmwobbleshot.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wobbleshot Mech Arm"
+      "Eng": "Wobbleshot Mech Arm",
+      "Por": "Braço de Mecha de Tiro Oscilante"
     }
   }
 ]
