Atualização translations/texts/items/generic/mechparts/body/mechbodyapex.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodyapex.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyapex.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dominion Mech Body"
+      "Eng": "Dominion Mech Body",
+      "Por": "Corpo de Mecha Domínio"
     }
   }
 ]
