Atualização translations/texts/items/generic/mechparts/body/mechbodyapexproto.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodyapexproto.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyapexproto.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dominion-00 Mech Body"
+      "Eng": "Dominion-00 Mech Body",
+      "Por": "Corpo de Mecha Domínio-00"
     }
   }
 ]
