Atualização translations/texts/items/generic/mechparts/body/mechbodyavian.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodyavian.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyavian.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Champion Mech Body"
+      "Eng": "Champion Mech Body",
+      "Por": "Corpo de Mecha do Campeão"
     }
   }
 ]
