Atualização translations/texts/items/generic/mechparts/body/mechbodyavianproto.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodyavianproto.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyavianproto.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Champion-00 Mech Body"
+      "Eng": "Champion-00 Mech Body",
+      "Por": "Corpo de Mecha do Campeão-00"
     }
   }
 ]
