Atualização translations/texts/items/generic/mechparts/body/mechbodybad.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodybad.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodybad.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Beat Mech Body"
+      "Eng": "Beat Mech Body",
+      "Por": "Corpo de Mecha do Batedor"
     }
   }
 ]
