--- a/translations/texts/items/generic/mechparts/body/mechbodycultist.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodycultist.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Occasus Mech Body"
+      "Eng": "Occasus Mech Body",
+      "Por": "Corpo de Mecha da Occasus "
     }
   }
 ]
