--- a/translations/texts/items/generic/mechparts/body/mechbodycultist2.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodycultist2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Occasus-2 Mech Body"
+      "Eng": "Occasus-2 Mech Body",
+      "Por": "Corpo de Mecha da Occasus-2"
     }
   }
 ]
