--- a/translations/texts/items/generic/mechparts/body/mechbodyexodus.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyexodus.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Exodus Mech Body"
+      "Eng": "Exodus Mech Body",
+      "Por": "Corpo de Mecha do Exodus"
     }
   }
 ]
