--- a/translations/texts/items/generic/mechparts/body/mechbodyfloran.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyfloran.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Golem Mech Body"
+      "Eng": "Golem Mech Body",
+      "Por": "Corpo de Mecha do Golem"
     }
   }
 ]
