--- a/translations/texts/items/generic/mechparts/body/mechbodyfloranproto.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyfloranproto.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Golem-00 Mech Body"
+      "Eng": "Golem-00 Mech Body",
+      "Por": "Corpo de Mecha do Golem-00"
     }
   }
 ]
