Atualização translations/texts/items/generic/mechparts/body/mechbodyglitch.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodyglitch.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyglitch.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Arthuria Mech Body"
+      "Eng": "Arthuria Mech Body",
+      "Por": "Corpo de Mecha de Arthuria"
     }
   }
 ]
