--- a/translations/texts/items/generic/mechparts/body/mechbodyhero.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyhero.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hero Mech Body"
+      "Eng": "Hero Mech Body",
+      "Por": "Corpo de Mecha do Herói"
     }
   }
 ]
