--- a/translations/texts/items/generic/mechparts/body/mechbodyhuman.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyhuman.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Venturer Mech Body"
+      "Eng": "Venturer Mech Body",
+      "Por": "Corpo de Mecha do Empreendedor"
     }
   }
 ]
