--- a/translations/texts/items/generic/mechparts/body/mechbodyhumanproto.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyhumanproto.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Venturer-00 Mech Body"
+      "Eng": "Venturer-00 Mech Body",
+      "Por": "Corpo de Mecha do Empreendedor-00"
     }
   }
 ]
