--- a/translations/texts/items/generic/mechparts/body/mechbodyhylotl.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyhylotl.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Kabuto Mech Body"
+      "Eng": "Kabuto Mech Body",
+      "Por": "Corpo de Mecha do Kabuto"
     }
   }
 ]
