--- a/translations/texts/items/generic/mechparts/body/mechbodyiris.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyiris.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cyclops Mech Body"
+      "Eng": "Cyclops Mech Body",
+      "Por": "Corpo de Mecha de Ciclope"
     }
   }
 ]
