--- a/translations/texts/items/generic/mechparts/body/mechbodymilitary.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodymilitary.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "USCM Mech Body"
+      "Eng": "USCM Mech Body",
+      "Por": "Corpo de Mecha da USCM"
     }
   }
 ]
