--- a/translations/texts/items/generic/mechparts/body/mechbodyminiknog.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyminiknog.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Miniknog Mech Body"
+      "Eng": "Miniknog Mech Body",
+      "Por": "Corpo de Mecha da Miniknog"
     }
   }
 ]
