Atualização translations/texts/items/generic/mechparts/body/mechbodynovakid.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodynovakid.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodynovakid.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Marshal Mech Body"
+      "Eng": "Marshal Mech Body",
+      "Por": "Corpo de Mecha do Marechal"
     }
   }
 ]
