--- a/translations/texts/items/generic/mechparts/body/mechbodynovakidproto.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodynovakidproto.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Marshal-00 Mech Body"
+      "Eng": "Marshal-00 Mech Body",
+      "Por": "Corpo de Mecha do Marechal-00"
     }
   }
 ]
