Atualização translations/texts/items/generic/mechparts/body/mechbodypenguin.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodypenguin.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodypenguin.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shockhopper Mech Body"
+      "Eng": "Shockhopper Mech Body",
+      "Por": "Corpo de Mecha de Shockhopper"
     }
   }
 ]
