Atualização translations/texts/items/generic/mechparts/body/mechbodypirate.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodypirate.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodypirate.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Skulduggery Mech Body"
+      "Eng": "Skulduggery Mech Body",
+      "Por": "Corpo de Mecha do Trapaçeiro"
     }
   }
 ]
