--- a/translations/texts/items/generic/mechparts/body/mechbodyprotector.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyprotector.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Protector's Mech Body"
+      "Eng": "Protector's Mech Body",
+      "Por": "Corpo de Mecha do Protetor"
     }
   }
 ]
