Atualização translations/texts/items/generic/mechparts/body/mechbodyreactor.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodyreactor.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyreactor.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Reactor Mech Body"
+      "Eng": "Reactor Mech Body",
+      "Por": "Corpo de Mecha de Reator"
     }
   }
 ]
