--- a/translations/texts/items/generic/mechparts/body/mechbodyshark.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyshark.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lilotron Mech Body"
+      "Eng": "Lilotron Mech Body",
+      "Por": "Corpo de Mecha de Lilotron"
     }
   }
 ]
