Atualização translations/texts/items/generic/mechparts/body/mechbodyskull.item.json

--- a/translations/texts/items/generic/mechparts/body/mechbodyskull.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodyskull.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Nightwinder Mech Body"
+      "Eng": "Nightwinder Mech Body",
+      "Por": "Corpo de Mecha de Nightwinder"
     }
   }
 ]
