--- a/translations/texts/items/generic/mechparts/booster/mechboosterastro.item.json
+++ b/translations/texts/items/generic/mechparts/booster/mechboosterastro.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Astro Mech Boosters"
+      "Eng": "Astro Mech Boosters",
+      "Por": "Propulsores de Mecha Astro"
     }
   }
 ]
