Atualização translations/texts/items/generic/mechparts/booster/mechboostergallant.item.json

--- a/translations/texts/items/generic/mechparts/booster/mechboostergallant.item.json
+++ b/translations/texts/items/generic/mechparts/booster/mechboostergallant.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Gallant Mech Boosters"
+      "Eng": "Gallant Mech Boosters",
+      "Por": "Propulsores de Mecha Imponentes"
     }
   }
 ]
