--- a/translations/texts/items/generic/mechparts/booster/mechboosterhammer.item.json
+++ b/translations/texts/items/generic/mechparts/booster/mechboosterhammer.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hammer Mech Boosters"
+      "Eng": "Hammer Mech Boosters",
+      "Por": "Propulsores de Mecha de Martelo"
     }
   }
 ]
