--- a/translations/texts/items/generic/mechparts/booster/mechboostersimple.item.json
+++ b/translations/texts/items/generic/mechparts/booster/mechboostersimple.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Basic Mech Boosters"
+      "Eng": "Basic Mech Boosters",
+      "Por": "Propulsores de Mecha Básicos"
     }
   }
 ]
