--- a/translations/texts/items/generic/mechparts/booster/mechboostersleek.item.json
+++ b/translations/texts/items/generic/mechparts/booster/mechboostersleek.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sleek Mech Boosters"
+      "Eng": "Sleek Mech Boosters",
+      "Por": "Propulsores de Mecha Lustrosos"
     }
   }
 ]
