Atualização translations/texts/items/generic/mechparts/booster/mechboosterstalwart.item.json

--- a/translations/texts/items/generic/mechparts/booster/mechboosterstalwart.item.json
+++ b/translations/texts/items/generic/mechparts/booster/mechboosterstalwart.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stalwart Mech Boosters"
+      "Eng": "Stalwart Mech Boosters",
+      "Por": "Propulsores de Mecha Robustos"
     }
   }
 ]
