--- a/translations/texts/items/generic/mechparts/booster/mechboosterzed.item.json
+++ b/translations/texts/items/generic/mechparts/booster/mechboosterzed.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Zed Mech Boosters"
+      "Eng": "Zed Mech Boosters",
+      "Por": "Propulsores de Mecha Z"
     }
   }
 ]
