Atualização translations/texts/items/generic/mechparts/booster/mechboosterzero.item.json

--- a/translations/texts/items/generic/mechparts/booster/mechboosterzero.item.json
+++ b/translations/texts/items/generic/mechparts/booster/mechboosterzero.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Zero Mech Boosters"
+      "Eng": "Zero Mech Boosters",
+      "Por": "Propulsores de Mecha Zero"
     }
   }
 ]
