--- a/translations/texts/items/generic/mechparts/horn/mechhornairhorn.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornairhorn.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Airhorn Mech Horn"
+      "Eng": "Airhorn Mech Horn",
+      "Por": "Buzina de Mecha a Ar"
     }
   }
 ]
