--- a/translations/texts/items/generic/mechparts/horn/mechhornbikebell.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornbikebell.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bike Bell Mech Horn"
+      "Eng": "Bike Bell Mech Horn",
+      "Por": "Buzina de Mecha Sino de Bicicleta"
     }
   }
 ]
