--- a/translations/texts/items/generic/mechparts/horn/mechhornbull.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornbull.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bull Mech Horn"
+      "Eng": "Bull Mech Horn",
+      "Por": "Buzina de Mecha de Touro"
     }
   }
 ]
