--- a/translations/texts/items/generic/mechparts/horn/mechhorncharge.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhorncharge.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Charge Mech Horn"
+      "Eng": "Charge Mech Horn",
+      "Por": "Buzina de Mecha de Carga"
     }
   }
 ]
