--- a/translations/texts/items/generic/mechparts/horn/mechhornclownhorn.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornclownhorn.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Clown Mech Horn"
+      "Eng": "Clown Mech Horn",
+      "Por": "Buzina de Mecha de Palhaço"
     }
   }
 ]
