--- a/translations/texts/items/generic/mechparts/horn/mechhornfoghorn.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornfoghorn.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Foghorn Mech Horn"
+      "Eng": "Foghorn Mech Horn",
+      "Por": "Buzina de Neblina de Mecha"
     }
   }
 ]
