--- a/translations/texts/items/generic/mechparts/horn/mechhornlacucha.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornlacucha.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Melody Mech Horn"
+      "Eng": "Melody Mech Horn",
+      "Por": "Buzina de Melodia de Mecha"
     }
   }
 ]
