Atualização translations/texts/items/generic/mechparts/horn/mechhornrobotvoice.item.json

--- a/translations/texts/items/generic/mechparts/horn/mechhornrobotvoice.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornrobotvoice.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Robot Voice Mech Horn"
+      "Eng": "Robot Voice Mech Horn",
+      "Por": "Buzina de Voz de Robô de Mecha"
     }
   }
 ]
