--- a/translations/texts/items/generic/mechparts/horn/mechhornrubberduck.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornrubberduck.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rubber Duck Mech Horn"
+      "Eng": "Rubber Duck Mech Horn",
+      "Por": "Buzina de Pato de Borracha de Mecha"
     }
   }
 ]
