--- a/translations/texts/items/generic/mechparts/horn/mechhornsportshorn.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornsportshorn.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sports Mech Horn"
+      "Eng": "Sports Mech Horn",
+      "Por": "Buzina de Esportes de Mecha"
     }
   }
 ]
