--- a/translations/texts/items/generic/mechparts/horn/mechhornsteamwhistle.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornsteamwhistle.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Steam Whistle Mech Horn"
+      "Eng": "Steam Whistle Mech Horn",
+      "Por": "Buzina de Apito a Vapor de Mecha"
     }
   }
 ]
