--- a/translations/texts/items/generic/mechparts/horn/mechhorntoy.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhorntoy.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toy Mech Horn"
+      "Eng": "Toy Mech Horn",
+      "Por": "Buzina de Brinquedo de Mecha"
     }
   }
 ]
