Atualização translations/texts/items/generic/mechparts/horn/mechhorntrain.item.json

--- a/translations/texts/items/generic/mechparts/horn/mechhorntrain.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhorntrain.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Train Whistle Mech Horn"
+      "Eng": "Train Whistle Mech Horn",
+      "Por": "Buzina de Apito de Trem de Mecha"
     }
   }
 ]
