--- a/translations/texts/items/generic/mechparts/horn/mechhorntruck.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhorntruck.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Truck Mech Horn"
+      "Eng": "Truck Mech Horn",
+      "Por": "Buzina de Caminhão de Mecha"
     }
   }
 ]
