--- a/translations/texts/items/generic/mechparts/horn/mechhornairhorn.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornairhorn.item.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Airhorn Mech Horn",
-      "Por": "Buzina de Mecha a Ar"
+      "Por": "Buzina a Ar de Mecha "
     }
   }
 ]
