Atualização translations/texts/items/generic/mechparts/horn/mechhornbikebell.item.json

--- a/translations/texts/items/generic/mechparts/horn/mechhornbikebell.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornbikebell.item.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Bike Bell Mech Horn",
-      "Por": "Buzina de Mecha Sino de Bicicleta"
+      "Por": "Buzina de Sino de Bicicleta de Mecha"
     }
   }
 ]
