Atualização translations/texts/items/generic/mechparts/horn/mechhornbull.item.json

--- a/translations/texts/items/generic/mechparts/horn/mechhornbull.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornbull.item.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Bull Mech Horn",
-      "Por": "Buzina de Mecha de Touro"
+      "Por": "Buzina de Touro de Mecha"
     }
   }
 ]
