Atualização translations/texts/items/generic/mechparts/horn/mechhorncharge.item.json

--- a/translations/texts/items/generic/mechparts/horn/mechhorncharge.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhorncharge.item.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Charge Mech Horn",
-      "Por": "Buzina de Mecha de Carga"
+      "Por": "Buzina de Carga de Mecha"
     }
   }
 ]
