Atualização translations/texts/items/generic/mechparts/horn/mechhornclownhorn.item.json

--- a/translations/texts/items/generic/mechparts/horn/mechhornclownhorn.item.json
+++ b/translations/texts/items/generic/mechparts/horn/mechhornclownhorn.item.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Clown Mech Horn",
-      "Por": "Buzina de Mecha de Palhaço"
+      "Por": "Buzina de Palhaço de Mecha"
     }
   }
 ]
