--- a/translations/texts/items/generic/mechparts/legs/mechlegshermes.item.json
+++ b/translations/texts/items/generic/mechparts/legs/mechlegshermes.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hermes Mech Legs"
+      "Eng": "Hermes Mech Legs",
+      "Por": "Pernas de Mecha de Hermes"
     }
   }
 ]
