--- a/translations/texts/items/generic/mechparts/legs/mechlegshopper.item.json
+++ b/translations/texts/items/generic/mechparts/legs/mechlegshopper.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hopper Mech Legs"
+      "Eng": "Hopper Mech Legs",
+      "Por": "Pernas de Mecha de Saltador"
     }
   }
 ]
