--- a/translations/texts/items/generic/mechparts/legs/mechlegsintrepid.item.json
+++ b/translations/texts/items/generic/mechparts/legs/mechlegsintrepid.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Intrepid Mech Legs"
+      "Eng": "Intrepid Mech Legs",
+      "Por": "Pernas de Mecha do Intrépido"
     }
   }
 ]
