--- a/translations/texts/items/generic/mechparts/legs/mechlegsronin.item.json
+++ b/translations/texts/items/generic/mechparts/legs/mechlegsronin.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ronin Mech Legs"
+      "Eng": "Ronin Mech Legs",
+      "Por": "Pernas de Mecha de Ronin"
     }
   }
 ]
