Atualização translations/texts/items/generic/mechparts/legs/mechlegstwinjet.item.json

--- a/translations/texts/items/generic/mechparts/legs/mechlegstwinjet.item.json
+++ b/translations/texts/items/generic/mechparts/legs/mechlegstwinjet.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Twinjet Mech Legs"
+      "Eng": "Twinjet Mech Legs",
+      "Por": "Pernas de Mecha a Jato"
     }
   }
 ]
