--- a/translations/texts/items/instruments/brightpiano.instrument.json
+++ b/translations/texts/items/instruments/brightpiano.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bright Piano"
+      "Eng": "Bright Piano",
+      "Por": "Piano Brilhante"
     }
   }
 ]
