--- a/translations/texts/items/instruments/dulcimer.instrument.json
+++ b/translations/texts/items/instruments/dulcimer.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hammered Dulcimer"
+      "Eng": "Hammered Dulcimer",
+      "Por": "Dulcimer"
     }
   }
 ]
