Atualização translations/texts/items/instruments/electricbass.instrument.json

--- a/translations/texts/items/instruments/electricbass.instrument.json
+++ b/translations/texts/items/instruments/electricbass.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Electric Bass Guitar"
+      "Eng": "Electric Bass Guitar",
+      "Por": "Baixo Elétrico"
     }
   }
 ]
