--- a/translations/texts/items/instruments/leadguitar.instrument.json
+++ b/translations/texts/items/instruments/leadguitar.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Lead Guitar"
+      "Eng": "Lead Guitar",
+      "Por": "Guitarra Solo"
     }
   }
 ]
