Atualização translations/texts/items/instruments/microphone.instrument.json

--- a/translations/texts/items/instruments/microphone.instrument.json
+++ b/translations/texts/items/instruments/microphone.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Low-Pitch Microphone"
+      "Eng": "Low-Pitch Microphone",
+      "Por": "Microfone de Tom Baixo"
     }
   }
 ]
