Atualização translations/texts/items/instruments/microphonefem.instrument.json

--- a/translations/texts/items/instruments/microphonefem.instrument.json
+++ b/translations/texts/items/instruments/microphonefem.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "High-Pitch Microphone"
+      "Eng": "High-Pitch Microphone",
+      "Por": "Microfone de Tom Alto"
     }
   }
 ]
