Atualização translations/texts/items/instruments/overdriveguitar.instrument.json

--- a/translations/texts/items/instruments/overdriveguitar.instrument.json
+++ b/translations/texts/items/instruments/overdriveguitar.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Overdrive Guitar"
+      "Eng": "Overdrive Guitar",
+      "Por": "Guitarra Overdrive"
     }
   }
 ]
