--- a/translations/texts/items/instruments/spaceorgan.instrument.json
+++ b/translations/texts/items/instruments/spaceorgan.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Space Synth"
+      "Eng": "Space Synth",
+      "Por": "Sintetizador Espacial"
     }
   }
 ]
