Atualização translations/texts/items/instruments/squareorgan.instrument.json

--- a/translations/texts/items/instruments/squareorgan.instrument.json
+++ b/translations/texts/items/instruments/squareorgan.instrument.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Square Wave"
+      "Eng": "Square Wave",
+      "Por": "Onda Quadrada"
     }
   }
 ]
