Atualização translations/texts/materials/shared_.mat.json

--- a/translations/texts/materials/shared_.mat.json
+++ b/translations/texts/materials/shared_.mat.json
@@ -13,7 +13,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glass Block"
+      "Eng": "Glass Block",
+      "Por": "Bloco de Vidro"
     }
   }
 ]
