Atualização translations/texts/materials/shared_alienrock.mat.json

--- a/translations/texts/materials/shared_alienrock.mat.json
+++ b/translations/texts/materials/shared_alienrock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Rock"
+      "Eng": "Alien Rock",
+      "Por": "Rocha Alienígena"
     }
   }
 ]
