Atualização translations/texts/materials/shared_ancientblock.mat.json

--- a/translations/texts/materials/shared_ancientblock.mat.json
+++ b/translations/texts/materials/shared_ancientblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ancient Block"
+      "Eng": "Ancient Block",
+      "Por": "Bloco Antigo"
     }
   }
 ]
