Atualização translations/texts/materials/shared_ancientbrick.mat.json

--- a/translations/texts/materials/shared_ancientbrick.mat.json
+++ b/translations/texts/materials/shared_ancientbrick.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ancient Brick"
+      "Eng": "Ancient Brick",
+      "Por": "Tijolo Antigo"
     }
   }
 ]
