Atualização translations/texts/materials/shared_apexshipdetails.mat.json

--- a/translations/texts/materials/shared_apexshipdetails.mat.json
+++ b/translations/texts/materials/shared_apexshipdetails.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Metal Railing"
+      "Eng": "Metal Railing",
+      "Por": "Trilhos de Metal"
     }
   }
 ]
