--- a/translations/texts/materials/shared_apexshipsupport.mat.json
+++ b/translations/texts/materials/shared_apexshipsupport.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ship Support"
+      "Eng": "Ship Support",
+      "Por": "Suporte de Nave"
     }
   }
 ]
