Atualização translations/texts/materials/shared_apexshipwall.mat.json

--- a/translations/texts/materials/shared_apexshipwall.mat.json
+++ b/translations/texts/materials/shared_apexshipwall.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wall Panel"
+      "Eng": "Wall Panel",
+      "Por": "Painel de Parede"
     }
   }
 ]
