Atualização translations/texts/materials/shared_aztec.mat.json

--- a/translations/texts/materials/shared_aztec.mat.json
+++ b/translations/texts/materials/shared_aztec.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glyph Block"
+      "Eng": "Glyph Block",
+      "Por": "Bloco de Glifo"
     }
   }
 ]
