Atualização translations/texts/materials/shared_aztectech.mat.json

--- a/translations/texts/materials/shared_aztectech.mat.json
+++ b/translations/texts/materials/shared_aztectech.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avian Tech Block"
+      "Eng": "Avian Tech Block",
+      "Por": "Bloco Tecnológico Avian"
     }
   }
 ]
