Atualização translations/texts/materials/shared_bars.mat.json

--- a/translations/texts/materials/shared_bars.mat.json
+++ b/translations/texts/materials/shared_bars.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Metal Bars"
+      "Eng": "Metal Bars",
+      "Por": "Barras de Metal"
     }
   }
 ]
