Atualização translations/texts/materials/shared_baseboard.mat.json

--- a/translations/texts/materials/shared_baseboard.mat.json
+++ b/translations/texts/materials/shared_baseboard.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Classic Baseboard"
+      "Eng": "Classic Baseboard",
+      "Por": "Rodapé Clássico"
     }
   }
 ]
