Atualização translations/texts/materials/shared_biorock.mat.json

--- a/translations/texts/materials/shared_biorock.mat.json
+++ b/translations/texts/materials/shared_biorock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Yellow Glow Rock"
+      "Eng": "Yellow Glow Rock",
+      "Por": "Rocha Amarela Brilhante"
     }
   }
 ]
