Atualização translations/texts/materials/shared_biorock2.mat.json

--- a/translations/texts/materials/shared_biorock2.mat.json
+++ b/translations/texts/materials/shared_biorock2.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Blue Glow Rock"
+      "Eng": "Blue Glow Rock",
+      "Por": "Rocha Azul Brilhante"
     }
   }
 ]
