Atualização translations/texts/materials/shared_blackglass.mat.json

--- a/translations/texts/materials/shared_blackglass.mat.json
+++ b/translations/texts/materials/shared_blackglass.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Black Glass"
+      "Eng": "Black Glass",
+      "Por": "Vidro Preto"
     }
   }
 ]
