Atualização translations/texts/materials/shared_blueneonsymbol.json

--- a/translations/texts/materials/shared_blueneonsymbol.json
+++ b/translations/texts/materials/shared_blueneonsymbol.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Blue Neon Block"
+      "Eng": "Blue Neon Block",
+      "Por": "Bloco de Néon Azul"
     }
   }
 ]
