Atualização translations/texts/materials/shared_bonematerial.mat.json

--- a/translations/texts/materials/shared_bonematerial.mat.json
+++ b/translations/texts/materials/shared_bonematerial.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Packed Bones"
+      "Eng": "Packed Bones",
+      "Por": "Ossos Embalados"
     }
   }
 ]
