Atualização translations/texts/materials/shared_bookpiles.mat.json

--- a/translations/texts/materials/shared_bookpiles.mat.json
+++ b/translations/texts/materials/shared_bookpiles.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pile of Books"
+      "Eng": "Pile of Books",
+      "Por": "Pilha de Livros"
     }
   }
 ]
