Atualização translations/texts/materials/shared_cabinroofing.mat.json

--- a/translations/texts/materials/shared_cabinroofing.mat.json
+++ b/translations/texts/materials/shared_cabinroofing.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cabin Roofing"
+      "Eng": "Cabin Roofing",
+      "Por": "Telhado de Cabana"
     }
   }
 ]
