Atualização translations/texts/materials/shared_cactiblock.mat.json

--- a/translations/texts/materials/shared_cactiblock.mat.json
+++ b/translations/texts/materials/shared_cactiblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cacti Block"
+      "Eng": "Cacti Block",
+      "Por": "Bloco de Cacto"
     }
   }
 ]
