Atualização translations/texts/materials/shared_candyblock.mat.json

--- a/translations/texts/materials/shared_candyblock.mat.json
+++ b/translations/texts/materials/shared_candyblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Candy Block"
+      "Eng": "Candy Block",
+      "Por": "Bloco de Doce"
     }
   }
 ]
