Atualização translations/texts/materials/shared_castlewalls1.mat.json

--- a/translations/texts/materials/shared_castlewalls1.mat.json
+++ b/translations/texts/materials/shared_castlewalls1.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Heavy Stone Brick"
+      "Eng": "Heavy Stone Brick",
+      "Por": "Tijolo Pesado de Pedra"
     }
   }
 ]
