Atualização translations/texts/materials/shared_castlewalls2.mat.json

--- a/translations/texts/materials/shared_castlewalls2.mat.json
+++ b/translations/texts/materials/shared_castlewalls2.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Small Stone Brick"
+      "Eng": "Small Stone Brick",
+      "Por": "Tijolo de Pedra Pequeno"
     }
   }
 ]
