Atualização translations/texts/materials/shared_chain.mat.json

--- a/translations/texts/materials/shared_chain.mat.json
+++ b/translations/texts/materials/shared_chain.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tungsten Chain"
+      "Eng": "Tungsten Chain",
+      "Por": "Corrente de Tungstênio"
     }
   }
 ]
