Atualização translations/texts/materials/shared_cheapwallpaper.mat.json

--- a/translations/texts/materials/shared_cheapwallpaper.mat.json
+++ b/translations/texts/materials/shared_cheapwallpaper.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tacky Wallpaper"
+      "Eng": "Tacky Wallpaper",
+      "Por": "Papel de Parede Brega"
     }
   }
 ]
