Atualização translations/texts/materials/shared_cobblestone.mat.json

--- a/translations/texts/materials/shared_cobblestone.mat.json
+++ b/translations/texts/materials/shared_cobblestone.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cobblestone"
+      "Eng": "Cobblestone",
+      "Por": "Pedregulho"
     }
   }
 ]
