Atualização translations/texts/materials/shared_cobblestonebrick.mat.json

--- a/translations/texts/materials/shared_cobblestonebrick.mat.json
+++ b/translations/texts/materials/shared_cobblestonebrick.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cobblestone Brick"
+      "Eng": "Cobblestone Brick",
+      "Por": "Tijolo de Pedregulho"
     }
   }
 ]
