Atualização translations/texts/materials/shared_coconutblock.mat.json

--- a/translations/texts/materials/shared_coconutblock.mat.json
+++ b/translations/texts/materials/shared_coconutblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Coconut Block"
+      "Eng": "Coconut Block",
+      "Por": "Bloco de Coco"
     }
   }
 ]
