Atualização translations/texts/materials/shared_composite01.mat.json

--- a/translations/texts/materials/shared_composite01.mat.json
+++ b/translations/texts/materials/shared_composite01.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Titanium Panel"
+      "Eng": "Titanium Panel",
+      "Por": "Painel de Titânio"
     }
   }
 ]
