Atualização translations/texts/materials/shared_concrete.mat.json

--- a/translations/texts/materials/shared_concrete.mat.json
+++ b/translations/texts/materials/shared_concrete.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Concrete Block"
+      "Eng": "Concrete Block",
+      "Por": "Bloco de Concreto"
     }
   }
 ]
