Atualização translations/texts/materials/shared_copperblock.mat.json

--- a/translations/texts/materials/shared_copperblock.mat.json
+++ b/translations/texts/materials/shared_copperblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Gear Block"
+      "Eng": "Copper Gear Block",
+      "Por": "Bloco de Engrenagem de Cobre"
     }
   }
 ]
