Atualização translations/texts/materials/shared_copperfence.mat.json

--- a/translations/texts/materials/shared_copperfence.mat.json
+++ b/translations/texts/materials/shared_copperfence.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Fence"
+      "Eng": "Copper Fence",
+      "Por": "Cerca de Cobre"
     }
   }
 ]
