Atualização translations/texts/materials/shared_copperroofing.mat.json

--- a/translations/texts/materials/shared_copperroofing.mat.json
+++ b/translations/texts/materials/shared_copperroofing.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Roofing"
+      "Eng": "Copper Roofing",
+      "Por": "Telhado de Cobre"
     }
   }
 ]
