Atualização translations/texts/materials/shared_copperwindow.mat.json

--- a/translations/texts/materials/shared_copperwindow.mat.json
+++ b/translations/texts/materials/shared_copperwindow.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Copper Window"
+      "Eng": "Copper Window",
+      "Por": "Janela de Cobre"
     }
   }
 ]
