Atualização translations/texts/materials/shared_corruptdirt.mat.json

--- a/translations/texts/materials/shared_corruptdirt.mat.json
+++ b/translations/texts/materials/shared_corruptdirt.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Corrupt Dirt"
+      "Eng": "Corrupt Dirt",
+      "Por": "Terra Corrompida"
     }
   }
 ]
