--- a/translations/texts/materials/shared_crosshatch.mat.json
+++ b/translations/texts/materials/shared_crosshatch.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Window Lattice"
+      "Eng": "Window Lattice",
+      "Por": "Treliça de Janela"
     }
   }
 ]
