--- a/translations/texts/materials/shared_crystalblock.mat.json
+++ b/translations/texts/materials/shared_crystalblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Crystal Block"
+      "Eng": "Crystal Block",
+      "Por": "Bloco de Cristal"
     }
   }
 ]
