Atualização translations/texts/materials/shared_darksmoothstone.mat.json

--- a/translations/texts/materials/shared_darksmoothstone.mat.json
+++ b/translations/texts/materials/shared_darksmoothstone.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dark Smooth Stone"
+      "Eng": "Dark Smooth Stone",
+      "Por": "Pedra Lisa Negra"
     }
   }
 ]
