Atualização translations/texts/materials/shared_dermisblock.mat.json

--- a/translations/texts/materials/shared_dermisblock.mat.json
+++ b/translations/texts/materials/shared_dermisblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ruin Dermis"
+      "Eng": "Ruin Dermis",
+      "Por": "Derme da Ruina"
     }
   }
 ]
