Atualização translations/texts/materials/shared_direstone.mat.json

--- a/translations/texts/materials/shared_direstone.mat.json
+++ b/translations/texts/materials/shared_direstone.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dire Stone"
+      "Eng": "Dire Stone",
+      "Por": "Pedra Rígida"
     }
   }
 ]
