Atualização translations/texts/materials/shared_eyepiles.mat.json

--- a/translations/texts/materials/shared_eyepiles.mat.json
+++ b/translations/texts/materials/shared_eyepiles.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pile of Eyes"
+      "Eng": "Pile of Eyes",
+      "Por": "Pilha de Olhos"
     }
   }
 ]
