Atualização translations/texts/materials/shared_fadedblocks.mat.json

--- a/translations/texts/materials/shared_fadedblocks.mat.json
+++ b/translations/texts/materials/shared_fadedblocks.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Soft Brick"
+      "Eng": "Soft Brick",
+      "Por": "Tijolo Macio"
     }
   }
 ]
