Atualização translations/texts/materials/shared_fence.mat.json

--- a/translations/texts/materials/shared_fence.mat.json
+++ b/translations/texts/materials/shared_fence.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wooden Fence"
+      "Eng": "Wooden Fence",
+      "Por": "Cerca de Madeira"
     }
   }
 ]
