Atualização translations/texts/materials/shared_fleshblock.mat.json

--- a/translations/texts/materials/shared_fleshblock.mat.json
+++ b/translations/texts/materials/shared_fleshblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flesh Chunk"
+      "Eng": "Flesh Chunk",
+      "Por": "Pedaço de Carne"
     }
   }
 ]
