Atualização translations/texts/materials/shared_floweryblock.mat.json

--- a/translations/texts/materials/shared_floweryblock.mat.json
+++ b/translations/texts/materials/shared_floweryblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flower Block"
+      "Eng": "Flower Block",
+      "Por": "Bloco de Flor"
     }
   }
 ]
