Atualização translations/texts/materials/shared_frozendirt.mat.json

--- a/translations/texts/materials/shared_frozendirt.mat.json
+++ b/translations/texts/materials/shared_frozendirt.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frozen Dirt"
+      "Eng": "Frozen Dirt",
+      "Por": "Terra Congelada"
     }
   }
 ]
