Atualização translations/texts/materials/shared_fullwood1.mat.json

--- a/translations/texts/materials/shared_fullwood1.mat.json
+++ b/translations/texts/materials/shared_fullwood1.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Treated Wood"
+      "Eng": "Treated Wood",
+      "Por": "Madeira Tratada"
     }
   }
 ]
