Atualização translations/texts/materials/shared_fullwood2.mat.json

--- a/translations/texts/materials/shared_fullwood2.mat.json
+++ b/translations/texts/materials/shared_fullwood2.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Unrefined Wood"
+      "Eng": "Unrefined Wood",
+      "Por": "Madeira Não Refinada"
     }
   }
 ]
