Atualização translations/texts/materials/shared_geodeblock.mat.json

--- a/translations/texts/materials/shared_geodeblock.mat.json
+++ b/translations/texts/materials/shared_geodeblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Geode Crystals"
+      "Eng": "Geode Crystals",
+      "Por": "Cristais de Geode"
     }
   }
 ]
