Atualização translations/texts/materials/shared_geodestone.mat.json

--- a/translations/texts/materials/shared_geodestone.mat.json
+++ b/translations/texts/materials/shared_geodestone.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Geode Stone"
+      "Eng": "Geode Stone",
+      "Por": "Pedra de Geode"
     }
   }
 ]
