Atualização translations/texts/materials/shared_goldblock.mat.json

--- a/translations/texts/materials/shared_goldblock.mat.json
+++ b/translations/texts/materials/shared_goldblock.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Gold Block"
+      "Eng": "Gold Block",
+      "Por": "Bloco de Ouro"
     }
   }
 ]
