Atualização translations/texts/materials/shared_grassy.mat.json

--- a/translations/texts/materials/shared_grassy.mat.json
+++ b/translations/texts/materials/shared_grassy.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sod Block"
+      "Eng": "Sod Block",
+      "Por": "Bloco de Grama"
     }
   }
 ]
